# embedded-test-rig

./: .gitignore  CMakeLists.txt  README.md  audit_project.sh  auto_cleanup_20250608_111153.sh  build.sh  build_error_fix.sh  build_improved.sh  build_pico.sh  conservative_cleanup_script.sh  consolidate_duplicates.sh  consolidate_duplicates_20250608_112136.sh  diagnose_cmake_issue.sh  fix.sh  fix_linkers.sh  fix_rebuild.sh  flash.sh  minimal.sh  monitor.sh  organize_headers.sh  pico_hal_stubs.sh  pre_consolidation_check.sh  project_audit.txt  redun.sh  safe_cleanup.sh
audit_results/: cleanup_recommendations_20250608_110946.sh  recommended_structure.txt
include/: board_config.h  diagnostics_engine.h  input_handler.h  system_loop.h
include/common/: types.h
include/core/: system_info.h  system_init.h  system_loop.h
include/demo/: hal_demo.h
include/monitoring/: diagnostics_engine.h
include/ui/: input_handler.h
include/utils/: hal_test.h
scripts/deployment/: flash_pico.sh
scripts/utils/: audit_project.sh  create_minimal_build.sh  debug_build.sh  debug_connection.sh
src/core/: system_info.cpp  system_init.cpp  system_init.h  system_loop.cpp  system_loop.h
src/demo/: hal_demo.cpp  hal_demo.h
src/monitoring/: diagnostics_engine.cpp
src/system/: safety_monitor.cpp  safety_monitor.h  system_info.cpp  system_info.h
src/ui/: input_handler.cpp  input_handler.h
src/utils/: hal_test.cpp  hal_test.h
web/: README.md  start_web_server.sh
web/api/: test.json
web/assets/css/: diagnostic.css  main.css
web/assets/js/: diagnostic-interface.js  main.js  websocket-client.js
web/static/: index.html
